now pybind compiles

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,4 +15,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${warnings}")
 
 add_subdirectory(src)
 
+add_subdirectory(pybind)
+
 add_subdirectory(test)
+
