--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -23,11 +23,16 @@ enable_testing()
 
 #this should make the tests standalone
 if(NOT TARGET MYLIB::MYLIB)
-    find_package(BH++ REQUIRED)
-    set(TestWDIR ${BH++_EXAMPLES_DIR})
+    find_package(MYLIB REQUIRED)
 endif()
 
 add_executable(mypybindtests baselibtest.cpp)
 target_link_libraries(mypybindtests PRIVATE Catch2::Catch2WithMain MYLIB::MYLIB)
 
 catch_discover_tests(mypybindtests)
+
+function(print_target_property target_name property)
+    get_target_property(tempvar ${target_name} ${property})
+    message("${target_name} <${property}>: ${tempvar}")
+    unset(tempvar)    
+endfunction(print_target_property)
