--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -29,10 +29,16 @@ endif()
 add_executable(mypybindtests baselibtest.cpp)
 target_link_libraries(mypybindtests PRIVATE Catch2::Catch2WithMain MYLIB::MYLIB)
 
+add_executable(mypybindtestswithPY pylibtest.cpp)
+target_link_libraries(mypybindtestswithPY PRIVATE Catch2::Catch2WithMain MYLIB::MYLIB pybind11::embed)
+
+add_executable(t t.cxx)
+target_link_libraries(t PRIVATE Catch2::Catch2WithMain MYLIB::MYLIB pybind11::embed)
+
 catch_discover_tests(mypybindtests)
 
-function(print_target_property target_name property)
-    get_target_property(tempvar ${target_name} ${property})
-    message("${target_name} <${property}>: ${tempvar}")
-    unset(tempvar)    
-endfunction(print_target_property)
+# function(print_target_property target_name property)
+    # get_target_property(tempvar ${target_name} ${property})
+    # message("${target_name} <${property}>: ${tempvar}")
+    # unset(tempvar)    
+# endfunction(print_target_property)
