--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${warnings}")
 add_subdirectory(src)
 
 add_subdirectory(pybind)
+add_subdirectory(pybindmodule)
 
 add_subdirectory(test)
 
