--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,17 +22,17 @@ include(Catch)
 enable_testing()
 
 #this should make the tests standalone
-if(NOT TARGET MYLIB::MYLIB)
+if(NOT TARGET MYLIB::mylib)
     find_package(MYLIB REQUIRED)
 endif()
 
 add_executable(mypybindtests baselibtest.cpp)
 target_link_libraries(mypybindtests PRIVATE
-    Catch2::Catch2WithMain MYLIB::MYLIB)
+    Catch2::Catch2WithMain MYLIB::mylib)
 
 add_executable(mypybindtestswithPY pylibtest.cpp)
 target_link_libraries(mypybindtestswithPY PRIVATE
-    Catch2::Catch2WithMain MYLIB::MYLIB pybind11::embed)
+    Catch2::Catch2WithMain MYLIB::mylib pybind11::embed)
 
 add_executable(passByReferenceTest passByReference.cpp)
 target_link_libraries(passByReferenceTest PRIVATE
@@ -49,14 +49,8 @@ catch_discover_tests(mypybindtestswithPY
 
 catch_discover_tests(passByReferenceTest)
 
-# function(print_target_property target_name property)
-    # get_target_property(tempvar ${target_name} ${property})
-    # message("${target_name} <${property}>: ${tempvar}")
-    # unset(tempvar)    
-# endfunction(print_target_property)
-
 find_package(Python COMPONENTS Interpreter REQUIRED)
 add_test(NAME foolishADD
     COMMAND ${Python_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/test_foolish.py
 )
-set_property(TEST foolishADD PROPERTY ENVIRONMENT "PYTHONPATH=${CMAKE_CURRENT_BIN_DIR}../pybindmodule")
+set_property(TEST foolishADD PROPERTY ENVIRONMENT "PYTHONPATH=${CMAKE_CURRENT_BIN_DIR}../pybindmodule:$ENV{PYTHONPATH}")
